--- a/todos/templates/todos/todo_list.html
+++ b/todos/templates/todos/todo_list.html
@@ -1,65 +1,43 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous"
-    />
-    <title>TWTodos - Lista de Tarefas</title>
-  </head>
+{% extends "base.html" %} 
 
-  <body>
-    <nav class="navbar bg-dark" data-bs-theme="dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">TWTodos</a>
-      </div>
-    </nav>
+{% block page_title %} Lista de Tarefas {% endblock page_title %}
 
-    <main class="container mt-4">
-      <h1>Lista de tarefas</h1>
-      {% if todos %}
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Titulo</th>
-            <th scope="col">Criado em</th>
-            <th scope="col">Data de entrega</th>
-            <th scope="col">Finalizado em</th>
-            <th scope="col">Ações</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for todo in todos %}
-          <tr>
-            <th scope="row">{{ todo.pk }}</th>
-            <td>{{ todo.title }}</td>
-            <td>{{ todo.created_at }}</td>
-            <td>{{ todo.deadline }}</td>
-            <td>{{ todo.finished_at | default:"-" }}</td>
-            <td>
-              <a href="#" class="btn btn-primary btn-sm">Concluir</a>
-              <a href="#" class="btn btn-danger btn-sm">Excluir</a>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      {% else %}
-      <div class="alert alert-info" role="alert">
-        Nenhuma tarefa encontrada.
-      </div>
-      {% endif %}
-    </main>
+{% block content %}
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1 class="">Lista de tarefas</h1>
+    <a href="{% url 'todo_form' %}" class="btn btn-primary">Nova Tarefa</a>
+  </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+  {% if todo_list %}
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Titulo</th>
+        <th scope="col">Criado em</th>
+        <th scope="col">Data de entrega</th>
+        <th scope="col">Finalizado em</th>
+        <th scope="col">Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for todo in todo_list %}
+      <tr>
+        <th scope="row">{{ todo.pk }}</th>
+        <td>{{ todo.title }}</td>
+        <td>{{ todo.created_at }}</td>
+        <td>{{ todo.deadline }}</td>
+        <td>{{ todo.finished_at | default:"-" }}</td>
+        <td>
+          <a href="#" class="btn btn-primary btn-sm">Concluir</a>
+          <a href="#" class="btn btn-danger btn-sm">Excluir</a>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% else %}
+  <div class="alert alert-info" role="alert">Nenhuma tarefa encontrada.</div>
+  {% endif %} 
+
+{% endblock content %}
